--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#C7EFC9">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,6 +48,7 @@
         </LinearLayout>
         <ListView
 
+            android:background="@drawable/bgr"
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
