--- a/app/src/main/res/layout/activity_sub_ttem.xml
+++ b/app/src/main/res/layout/activity_sub_ttem.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bạn Đã Chọn :"
+        android:text="Màn Hình Chi Tiết :"
         android:textSize="40dp"
         android:gravity="center_horizontal"
         android:background="#CEDA5E"
